# vscodiff

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml
src/vscodiff/: __init__.py  codiff.py  engine.py
src/vscodiff/common/: asserts.py  cache.py  char_code.py  edit_operation.py  errors.py  hash.py  line_range.py  lists.py  lists_find.py  map.py  offset_edit.py  offset_range.py  position.py  position_to_offset.py  range.py  strings.py  text_edit.py  text_length.py  uint.py
src/vscodiff/common/diff/: diff.py  diff_change.py
src/vscodiff/diff/: document_diff_provider.py  legacy_lines_diff_computer.py  lines_diff_computer.py  lines_diff_computers.py  model.py  range_mapping.py
src/vscodiff/diff/default_lines_diff_computer/: compute_moved_lines.py  default_lines_diff_computer.py  heuristic_sequence_optimizations.py  line_sequence.py  lines_slice_char_sequence.py  utils.py
src/vscodiff/diff/default_lines_diff_computer/algorithms/: diff_algorithm.py  dynamic_programming_diffing.py  myers_diff_algorithm.py
tests/: test_codiff.py  test_legacy_diff.py  test_vscdiff.py  test_vscode_suite.py
